HND-59 Adds trails create api and related docs
