# app/controllers/api/v1/trails_controller.rb
@@ -7,6 +7,25 @@ class Api::V1::TrailsController < ApplicationController
     @trails = @current_user.trails
   end
 
+  def create
+    prompt = TrailPrompt.new(
+      language: Language.new(acronym: trail_params[:language])
+    )
+
+    raise(CustomException, prompt.errors.full_messages.to_sentence) unless prompt.errors.empty?
+
+    ai_service = GoogleAiService.new(user: @current_user)
+    ai_response = JSON.parse(ai_service.generate_text(prompt: prompt.prompt))
+
+    @trail = @current_user.trails.create!(
+      ai_response.merge(language: trail_params[:language])
+    )
+
+    render :show, status: :created
+  rescue JSON::ParserError
+    render json: { message: I18n.t('errors/messages.ai_response_invalid') }, status: :bad_request
+  end
+
   def show; end
 
   def destroy
@@ -19,5 +38,9 @@ class Api::V1::TrailsController < ApplicationController
     @trail = @current_user.trails.find(params[:id])
   rescue ActiveRecord::RecordNotFound
     render json: { message: I18n.t('errors/messages.trail_not_found') }, status: :not_found
+  end
+
+  def trail_params
+    params.require(:trail).permit(:language)
   end
 end
